<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragmentsinicio.ConfigurationFragment">

    <data>
        <variable
            name="viewModel"
            type="com.example.ausagi.model.ProfileViewModel" />
        <variable
            name="ConfigurationFragment"
            type="com.example.ausagi.fragmentsinicio.ConfigurationFragment" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:background="?attr/colorSecondary"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/boton_modificar_foto"
                    android:layout_width="@dimen/circulo_foto"
                    android:layout_height="@dimen/circulo_foto"
                    android:layout_marginTop="@dimen/margen_grande"
                    android:background="@drawable/circle"
                    android:text="@string/modify"
                    android:textColor="?attr/colorOnSecondary"
                    android:textSize="@dimen/titulo_2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/espacio_modificar_perfil_foto"
                    android:layout_width="@dimen/circulo_foto"
                    android:layout_height="@dimen/circulo_foto"
                    android:layout_marginTop="@dimen/margen_grande"
                    android:scaleType="centerCrop"
                    android:adjustViewBounds="true"
                    android:elevation="@dimen/elevacion_corta"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:shapeAppearanceOverlay="@style/circleImageViewStyle"
                    tools:targetApi="lollipop" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout2"
                    style="@style/AppTheme.TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margen_normal"
                    android:layout_marginEnd="@dimen/margen_normal"
                    android:layout_marginStart="@dimen/margen_normal"
                    android:hint="@string/text_input_name"
                    android:textColor="?attr/colorOnSecondary"
                    app:boxCornerRadiusBottomEnd="@dimen/radio_boton"
                    app:boxCornerRadiusBottomStart="@dimen/radio_boton"
                    app:boxCornerRadiusTopEnd="@dimen/radio_boton"
                    app:boxCornerRadiusTopStart="@dimen/radio_boton"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/boton_modificar_foto">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/espacio_nombre_config"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:maxLength="20"
                        android:maxLines="1"
                        android:textColor="?attr/colorOnSecondary"
                        android:text="@{viewModel.listaPerfiles[viewModel.posicion].name}"/>
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/titulo_elegirnivel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margen_normal"
                    android:text="@string/elige_un_nivel"
                    android:textColor="?attr/colorOnSecondary"
                    android:textSize="@dimen/titulo_2"
                    app:layout_constraintStart_toStartOf="@+id/textInputLayout2"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />

                <RadioGroup
                    android:id="@+id/radioGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margen_peque"
                    app:layout_constraintStart_toStartOf="@+id/titulo_elegirnivel"
                    app:layout_constraintTop_toBottomOf="@+id/titulo_elegirnivel">

                    <RadioButton
                        android:id="@+id/radioButtonN1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="?attr/titleTextColor"
                        android:checked="@{viewModel.listaPerfiles[viewModel.posicion].level.equals(@string/nivel_1_pictogramas)}"
                        android:onClick="@{() -> viewModel.setNivelTemp(@string/nivel_1_pictogramas)}"
                        android:text="@string/nivel_1_pictogramas"
                        android:textColor="?attr/colorOnSecondary"
                        tools:targetApi="lollipop" />

                    <RadioButton
                        android:id="@+id/radioButtonN2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="?attr/titleTextColor"
                        android:checked="@{viewModel.listaPerfiles[viewModel.posicion].level.equals(@string/nivel_2_pictogramas)}"
                        android:onClick="@{() -> viewModel.setNivelTemp(@string/nivel_2_pictogramas)}"
                        android:text="@string/nivel_2_pictogramas"
                        android:textColor="?attr/colorOnSecondary"
                        tools:targetApi="lollipop" />

                    <RadioButton
                        android:id="@+id/radioButtonN3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="?attr/titleTextColor"
                        android:checked="@{viewModel.listaPerfiles[viewModel.posicion].level.equals(@string/nivel_3_pictogramas)}"
                        android:onClick="@{() -> viewModel.setNivelTemp(@string/nivel_3_pictogramas)}"
                        android:text="@string/nivel_3_pictogramas"
                        android:textColor="?attr/colorOnSecondary"
                        tools:targetApi="lollipop" />
                </RadioGroup>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout3"
                    style="@style/AppTheme.TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/comentarios"
                    android:textColor="?attr/colorOnSecondary"
                    android:layout_marginTop="@dimen/margen_normal"
                    android:layout_marginEnd="@dimen/margen_normal"
                    android:layout_marginStart="@dimen/margen_normal"
                    app:boxCornerRadiusBottomEnd="@dimen/radio_boton"
                    app:boxCornerRadiusBottomStart="@dimen/radio_boton"
                    app:boxCornerRadiusTopEnd="@dimen/radio_boton"
                    app:boxCornerRadiusTopStart="@dimen/radio_boton"
                    app:layout_constraintStart_toStartOf="@+id/radioGroup"
                    app:layout_constraintTop_toBottomOf="@+id/radioGroup">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/espacio_comentario_config"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start|top"
                        android:inputType="textMultiLine"
                        android:lines="3"
                        android:maxLength="200"
                        android:maxLines="5"
                        android:textColor="?attr/colorOnSecondary"
                        android:text="@{viewModel.listaPerfiles[viewModel.posicion].comment}"/>
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/titulo_elegirpaleta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/elige_paleta"
                    android:textColor="?attr/colorOnSecondary"
                    android:textSize="@dimen/titulo_2"
                    android:layout_marginTop="@dimen/margen_normal"
                    app:layout_constraintStart_toStartOf="@+id/radioGroup"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayout3" />

                <RadioGroup
                    android:id="@+id/radioGroup2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margen_peque"
                    app:layout_constraintStart_toStartOf="@+id/titulo_elegirpaleta"
                    app:layout_constraintTop_toBottomOf="@+id/titulo_elegirpaleta">

                    <RadioButton
                        android:id="@+id/radioButtonAzul"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="?attr/titleTextColor"
                        android:checked="@{viewModel.listaPerfiles[viewModel.posicion].colour.equals(@string/text_azul)}"
                        android:onClick="@{() -> viewModel.setColorTemp(@string/text_azul)}"
                        android:text="@string/text_azul"
                        android:textColor="?attr/colorOnSecondary"
                        tools:targetApi="lollipop" />

                    <RadioButton
                        android:id="@+id/radioButtonMarron"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="?attr/titleTextColor"
                        android:checked="@{viewModel.listaPerfiles[viewModel.posicion].colour.equals(@string/text_marron)}"
                        android:onClick="@{() -> viewModel.setColorTemp(@string/text_marron)}"
                        android:text="@string/text_marron"
                        android:textColor="?attr/colorOnSecondary"
                        tools:targetApi="lollipop" />

                    <RadioButton
                        android:id="@+id/radioButtonVerde"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="?attr/titleTextColor"
                        android:checked="@{viewModel.listaPerfiles[viewModel.posicion].colour.equals(@string/text_verde)}"
                        android:onClick="@{() -> viewModel.setColorTemp(@string/text_verde)}"
                        android:text="@string/text_verde"
                        android:textColor="?attr/colorOnSecondary"
                        tools:targetApi="lollipop" />
                </RadioGroup>

                <Button
                    android:id="@+id/boton_configurar_tablero"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="@dimen/margen_grande"
                    android:layout_marginEnd="@dimen/margen_grande"
                    android:layout_marginTop="@dimen/margen_normal"
                    android:elevation="@dimen/elevacion"
                    android:text="@string/text_configurar_tablero"
                    android:textColor="?attr/colorOnSecondary"
                    app:cornerRadius="@dimen/radio_boton"
                    app:iconTint="?attr/colorPrimary"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/radioGroup2"
                    tools:targetApi="lollipop" />

                <Button
                    android:id="@+id/boton_eliminar_perfil"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="@dimen/margen_grande"
                    android:layout_marginEnd="@dimen/margen_grande"
                    android:layout_marginTop="@dimen/margen_peque"
                    android:elevation="@dimen/elevacion"
                    android:text="@string/text_eliminar_perfil"
                    android:textColor="@android:color/holo_red_light"
                    app:cornerRadius="@dimen/radio_boton"
                    app:iconTint="?attr/colorPrimary"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/boton_configurar_tablero"
                    tools:targetApi="lollipop" />

                <Button
                    android:id="@+id/boton_perfil_modificado"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:gravity="center_horizontal"
                    android:text="@string/texto_boton_hecho"
                    android:textColor="?attr/colorOnSecondary"
                    android:layout_marginTop="@dimen/margen_normal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/boton_eliminar_perfil" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>
</layout>