<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragmentsconfiguracion.ChooseConfigFragment">

    <data>

        <variable
            name="ChooseConfigFragment"
            type="com.example.ausagi.fragmentsconfiguracion.ChooseConfigFragment" />

        <variable
            name="viewModel"
            type="com.example.ausagi.model.ProfileViewModel" />
    </data>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="?attr/colorSecondary">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/titulo_instrucciones"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="sans-serif-black"
                android:text="@string/text_configurar_tablero"
                android:textColor="?attr/titleTextColor"
                android:textSize="@dimen/titulo_1_2"
                app:layout_constraintBottom_toBottomOf="@+id/botonAtras"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/botonAtras"
                app:layout_constraintTop_toTopOf="@+id/botonAtras" />

            <ImageButton
                android:id="@+id/botonAtras"
                android:layout_width="@dimen/lista_botones_config_circulos"
                android:layout_height="@dimen/lista_botones_config_circulos"
                android:background="@drawable/rounded_corner"
                android:elevation="@dimen/elevacion"
                android:padding="@dimen/margen_peque"
                android:layout_marginTop="@dimen/margen_grande"
                android:layout_marginBottom="@dimen/margen_normal"
                android:layout_marginStart="@dimen/margen_grande"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_baseline_arrow_back_24"
                tools:ignore="ContentDescription"
                tools:targetApi="lollipop" />


            <Button
                android:id="@+id/boton_Tablero_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="@dimen/margen_grande"
                android:layout_marginEnd="@dimen/margen_grande"
                android:layout_marginTop="@dimen/margen_grande"
                android:elevation="@dimen/elevacion"
                android:text="@string/nivel_1_pictogramas"
                android:textColor="?attr/colorOnSecondary"
                app:cornerRadius="@dimen/radio_boton"
                app:iconTint="?attr/colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/botonAtras"
                tools:targetApi="lollipop" />

            <Button
                android:id="@+id/boton_Tablero_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="@dimen/margen_grande"
                android:layout_marginEnd="@dimen/margen_grande"
                android:layout_marginTop="@dimen/margen_peque"
                android:elevation="@dimen/elevacion"
                android:text="@string/nivel_2_pictogramas"
                android:textColor="?attr/colorOnSecondary"
                app:cornerRadius="@dimen/radio_boton"
                app:iconTint="?attr/colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/boton_Tablero_1"
                tools:targetApi="lollipop" />

            <Button
                android:id="@+id/boton_Tablero_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="@dimen/margen_grande"
                android:layout_marginEnd="@dimen/margen_grande"
                android:layout_marginTop="@dimen/margen_peque"
                android:elevation="@dimen/elevacion"
                android:text="@string/nivel_3_pictogramas"
                android:textColor="?attr/colorOnSecondary"
                app:cornerRadius="@dimen/radio_boton"
                app:iconTint="?attr/colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/boton_Tablero_2"
                tools:targetApi="lollipop" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</layout>